gccida/c2/compute_hash_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:2982:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = v3; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:3037:7: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
v13 = reg_avail_info_0; 
      ^~~~~~~~~~~~~~~~
      reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:3038:7: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
v14 = uid_cuid_1; 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:3077:6: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
v3 = reg_avail_info_0; 
     ^~~~~~~~~~~~~~~~
     reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:3144:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = 0LL; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_hash_table/src/obj/gcse.o] Error 1
